--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tiny-toast",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "private": false,
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -9,6 +9,11 @@
       "@babel/react"
     ]
   },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,9 +21,9 @@
     "@testing-library/user-event": "^7.1.2"
   },
   "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-scripts": "^3.1.0"
   },
   "scripts": {
     "start": "rm -rf lib && mkdir lib && npx babel src --out-dir lib --copy-files --watch",
