--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -11,19 +11,14 @@
   },
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2"
+    "@babel/cli": "^7.7.5"
   },
   "peerDependencies": {
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-scripts": "^3.1.0"
+    "react-dom": "^16.8.0"
   },
   "scripts": {
     "start": "rm -rf lib && mkdir lib && npx babel src --out-dir lib --copy-files --watch",
