--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,8 +6,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "react-tiny-toast": "*",
-    "reakit": "^1.0.0-beta.13"
+    "react-tiny-toast": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
