--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,7 +6,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "react-tiny-toast": "*"
+    "react-tiny-toast": "0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "build": "build-storybook -c .storybook -o public"
   },
   "eslintConfig": {
     "extends": "react-app"
