--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tiny-toast",
-  "version": "0.1.8",
+  "version": "0.1.10",
   "private": false,
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -48,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [
+    "react",
+    "react-toast-notifications",
+    "react-notifications",
+    "react-tiny-toast",
+    "toast-notifications"
+  ]
 }
