Adds uniqueCode to show only toasts that are unique.

--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "main": "lib/index.js",
   "module": "lib/index.js",
+  "sideEffects": false,
   "babel": {
     "presets": [
       "@babel/react"
