Adds MIT license and remove sideEffects flag

--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-tiny-toast",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "private": false,
   "main": "lib/index.js",
   "module": "lib/index.js",
-  "sideEffects": false,
+  "license": "MIT",
   "babel": {
     "presets": [
       "@babel/react"
