You can add your custom class for styling

--- a/packages/react-tiny-toast/package.json
+++ b/packages/react-tiny-toast/package.json
@@ -11,15 +11,15 @@
     ]
   },
   "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">=16.8.0 <17.0",
+    "react-dom": ">=16.8.0 <17.0"
   },
   "scripts": {
     "start": "rm -rf lib && mkdir lib && npx babel src --out-dir lib --copy-files --watch",
