--- a/packages/react-tiny-toast/tsconfig.json
+++ b/packages/react-tiny-toast/tsconfig.json
@@ -14,7 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
     "declaration": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
