--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "rootDir": "src",
+    "rootDir": "./src",
     "outDir": "lib",
     "allowJs": true,
     "skipLibCheck": true,
@@ -22,6 +22,6 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "./src"
   ]
 }
