feat: Add logging to package publish for debugging

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{ secrets.NPM_ACCESS_TOKEN }}
+      - if: ${{ steps.publish.outputs.type }}
+        run: echo "Version changed!"
