--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "types": "lib/types/react-tiny-toast.d.ts",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": ">=16.8.0 <17.0",
+    "react-dom": ">=16.8.0 <17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
+    "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
