--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "types": "lib/types/react-tiny-toast.d.ts",
   "dependencies": {
-    "react": ">=17.0.0 <18.0",
-    "react-dom": ">=17.0.0 <18.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
@@ -26,8 +26,8 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "react": ">=17.0.0 <18.0",
-    "react-dom": ">=17.0.0 <18.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "scripts": {
     "start": "tsc -w",
